--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,29 +2,9 @@ html {
   scroll-behavior: smooth;
 }
 
-.hamburger {
-  width: 40px;
-  height: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.hamburger span {
-  --transition-duration: 200ms;
-  width: 35px;
-  height: 2px;
-  background-color: #fff;
-  transform-origin: left;
-  border-radius: 3px;
-  transition: transform var(--transition-duration),
-    translate var(--transition-duration), opacity var(--transition-duration);
-}
-
 .full-height {
-  height: calc(100dvh - 5rem);
   height: calc(100vh - 5rem);
+  height: calc(100dvh - 5rem);
 }
 
 .open span:first-child {
@@ -46,25 +26,49 @@ html {
   translate: 0 -10px;
 }
 
-.navbar {
-  width: 10rem;
-  border-radius: 10px;
-  padding: 1rem;
-  position: absolute;
-  flex-direction: column;
-  align-items: flex-start;
-  translate: -4em 3.5em;
-  background-color: #2a2a2a;
+.navbar, .hamburger {
+  display: none;
 }
 
-@media screen and (max-width: 490px) {
+.project-image {
+  width: 30rem;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
   .navbar {
-    width: 100%;
-    border-radius: 0;
-    translate: 0;
-    left: 0;
-    top: 6rem;
+    display: block;
+    width: 8rem;
+    border-radius: 5px;
+    padding: 1rem;
+    position: absolute;
+    flex-direction: column;
+    align-items: flex-start;
+    top: 4.5rem;
+    right: 1rem;
+    background-color: #2a2a2a;
   }
+
+  .hamburger {
+    width: 20px;
+    height: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .hamburger span {
+    --transition-duration: 200ms;
+    width: 23px;
+    height: 2px;
+    background-color: #fff;
+    transform-origin: left;
+    border-radius: 3px;
+    transition: transform var(--transition-duration),
+      translate var(--transition-duration), opacity var(--transition-duration);
+  }
+  
 }
 
 .opacity-animation {
